--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -6,27 +6,33 @@
 {% endblock %}
 {% block content %}
 
+
 <p class="important">
 
-    {% if session['name'] %}Welcome :&emsp;{{session['name']}}
+{% if session['email'] %}Welcome :&emsp;{{session['email']}}
+<div class="container">
+    <div class="panel panel-info">
 
-    <div id="login" class="span3 well well-large offset4">
 
-        <br><br><br><br><br><br><br><br><br><br><br><br>
+    <!--stat-->
 
-        <h2><center> <b>Hello {{session['name']}} your welcome!!</b> </center></h2>
+        <div class="panel-heading">Hello {{session['name']}}</div>
+            <div class="panel-body panel-resizable">
 
-        <br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-        {% else %}
+            {% else %}
 
-        <p style="color: red"> You still didn't set your Email, do it
-        <a href="{{ url_for('admin') }}">here</a></p>
+
+<p style="color: red"> You still didn't set your Email, do it
+    <a href="{{ url_for('admin') }}">here</a></p>
 
 {% include 'admin/session.html' %}
-</div>
-
 {% endif %}
+            </div>
+        </div>
+    </div>
+
 </p>
 
 {% endblock %}
