--- a/templates/admin/session.html
+++ b/templates/admin/session.html
@@ -1,9 +1,8 @@
-<div id="login" class="span3 well well-large offset4">
-    <center>
-        <div class="container">
-            <div class="col-sm-6 col-md-4 col-md-offset-4">
-                <h1>Sign into your account</h1><br>
-                    <div class="account-wall">
+    <div class="container">
+        <center>
+        <div class="panel panel-info">
+            <div class="panel-heading">Sign into your account</div>
+                <div class="panel-body panel-resizable">
                         <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                             alt="">
 
@@ -16,8 +15,8 @@
                             </label>
                             <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
                         </form>
-                    </div><br><br><br><br>
+                    </div>
+                </div>
             </div>
-        </div>
-    </center>
-</div>
+            </center>
+    </div>
