--- a/templates/user/get_survey.html
+++ b/templates/user/get_survey.html
@@ -18,8 +18,7 @@
                 <form action="/user/search_survey" method="post">
                     <input type="text" id="myInput" name="survey" style="text-align: center;" placeholder="Search for survey names.." required="">
                     <br>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Search <i class="material-icons right">send</i></button>
-
+                    <button type="submit" class="btn btn-defalt">Search</button>
                 </form><br><br>
 
                 <table id="myTable">
