--- a/templates/user/session.html
+++ b/templates/user/session.html
@@ -11,7 +11,7 @@
                         <input type="email" class="form-control" style="text-align: center"  placeholder="Email" name="email" required autofocus >
                         <input type="password" class="form-control" style="text-align: center"  placeholder="Password" name="password" required>
 
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Sign <i class="material-icons right">send</i></button>
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Signin <i class="material-icons right">send</i></button>
 
 
                         <a href="/user/forgot" class="pull-right need-help">Forgot Password </a><span class="clearfix"></span>
