--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -34,10 +34,10 @@
 
                                 <input type="text" class="form-control" placeholder="Security Question Answer" style="text-align: center"  name="answer" required autofocus ><br>
 
-                                <button class="btn waves-effect waves-light" type="submit" name="action">Sign up <i class="material-icons right">send</i></button>
+                                <button class="btn waves-effect waves-light" type="submit" name="action">Signup <i class="material-icons right">send</i></button>
 
 
-                                <a href="/user" class="pull-right need-help">Signup</a><span class="clearfix"></span>
+                                <a href="/user" class="pull-right need-help">Signin</a><span class="clearfix"></span>
                             </form>
                         </div>
 
