--- a/templates/user/reset_password.html
+++ b/templates/user/reset_password.html
@@ -21,7 +21,9 @@
                         <form class="form-signin" action="/user/reset_password" method="post">
                             <p style="color:gray; text-align: center;">{{ email }}</p>
                     <input type="hidden" class="form-control" placeholder="email" style="text-align: center"  name="email" value="{{ email }}">
-                    <input type="password" class="form-control" placeholder="Reset Your Password" style="text-align: center"  name="password" required autofocus ><br>
+                    <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"
+                                        title="At least one number, one lowercase and one uppercase letterand at least six characters e.g. aA1qwe"
+                           placeholder="Reset Your Password" style="text-align: center"  name="password" required autofocus ><br>
   <button class="btn waves-effect waves-light" type="submit" name="action">Submit <i class="material-icons right">send</i></button>
                         </form>
                      </div>
