--- a/templates/user/save_survey.html
+++ b/templates/user/save_survey.html
@@ -8,17 +8,21 @@
 
 
 <p class="important">
-    <div id="login" class="span3 well well-large offset4">
-        <center>
 
-            <br><br><br><br><br><br><br><br><br><br><br><br>
+        <center>
+    <div class="container">
+        <center>
+        <div class="panel panel-info">
+            <div class="panel-heading">saved !</div>
+                <div class="panel-body panel-resizable">
+            <br><br><br><br><br><br><br><br><br><br>
 
             <h4>Survey Saved</h4><br>
 
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        </center>
+            <br><br><br><br><br><br><br><br><br><br>
 
-    </div>
+
+    </div></div></div></center>
 </p>
 
 {% endblock %}
